infrastructure/traefik/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.jklu-lab.eu`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          serversTransport: argocd-transport
  tls: {}
